<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapoi_webui</name>
  <version>0.1.0</version>
  <description>Web UI for mapoi - POI editing, navigation, and robot monitoring</description>
  <maintainer email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/shimz-robotics/mapoi</url>
  <url type="bugtracker">https://github.com/shimz-robotics/mapoi/issues</url>
  <author email="kimura.shunsuke@shimz.co.jp">Shunsuke Kimura</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>mapoi_interfaces</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- mapoi_webui_node.py が get_package_share_directory('mapoi_server') で
       maps/tag_definitions.yaml を runtime 参照するため。
       #40 で mapoi_server → mapoi_webui の依存が消えたため、循環しない。 -->
  <exec_depend>mapoi_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
